package at.fhhagenberg.sqe.ui;

import at.fhhagenberg.sqe.App;
import javafx.application.Application;

public class Launcher {

    public static void main (String[] args) {
        Application.launch(App.class, args);
    }
}
