package sqelevator.exceptions;

public class InvalidProgramArgumentsException extends IllegalArgumentException {
    public InvalidProgramArgumentsException(String s) {
        super(s);
    }
}
